<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <TextView
            android:text="Quick SSH"
            android:textColor="@color/primary"
            android:fontFamily="@font/custom_font_bold"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/host_field"
            android:text="128.199.180.160"
            android:fontFamily="@font/custom_font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="host"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/host"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/primary"
            android:textColorHint="@color/grey"/>

        <EditText
            android:id="@+id/port_field"
            android:fontFamily="@font/custom_font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:autofillHints="port"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:text="@string/defaultPort"
            android:hint="@string/port"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/primary"
            android:textColorHint="@color/grey"
            tools:text="@string/defaultPort" />

        <EditText
            android:id="@+id/username_field"
            android:text="root"
            android:fontFamily="@font/custom_font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/primary"
            android:textColorHint="@color/grey"/>

        <EditText
            android:id="@+id/password_field"
            android:text="0A2198evan"
            android:fontFamily="@font/custom_font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/primary"
            android:textColorHint="@color/grey"/>

        <Button
            android:id="@+id/button"
            android:fontFamily="@font/custom_font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:onClick="authenticate"
            android:layout_marginTop="32dp"
            android:text="@string/button_send"
            android:textSize="18sp"
            android:textColor="@android:color/background_light"
            tools:text="@string/button_send" />
    </LinearLayout>
</RelativeLayout>
